# doomLooker

./: CMakeLists.txt  testTex.ppm  texAtlas.ppm
include/: DFread.h  atlas.h  buildModel.h  directoryEntry.h  game.h  mapComponentStructs.h  mapStruct.h  model.h  readWad.h  sectorPoly.h  texture.h  textureBuilding.h  vertex.h  wad.h  wadComposite.h
include/glad/: glad.h
licenses/: cglm_license.txt  glad_license.txt
shaders/: basicfrag.glsl  basicvert.glsl
src/: atlas.c  buildModel.c  game.c  glad.c  main.c  readWad.c
src/sceneBuilding/: atlas.c  buildModel.c  sectorPoly.c
src/wadReading/: DFread.c  directoryEntry.c  handleWadComposite.c  readWad.c  textureBuilding.c  wadComposite.c
